--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html> 
 <html class="no-js" lang="en"> 
 <head> 
-   <meta charset="utf-8">
-	<title>jQuery Form</title>
-	<meta name="description" content="">  
-	<meta name="author" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<title>Registro</title>
+		<meta charset="utf-8">
+		<meta name="description" content="">  
+		<meta name="author" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  	<!-- CSS -->
-   <link rel="stylesheet" href="css/base.css"> 
-   <link rel="stylesheet" href="css/main.css">  
-   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">	
+		<link rel="stylesheet" href="css/base.css"> 
+		<link rel="stylesheet" href="css/main.css">  
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link rel="shortcut icon" href="images/icon.png">	
 </head>
+
 <body> 
 <section id="contac">
 <h1 style="color:white; font-size: 50px; ">&nbsp; Js</h1>
@@ -63,16 +65,14 @@
 					<th>Editar</th>
 					<th>Eliminar</th>
 					</thead>
-
 					<tbody id="tbody">
-				
 					</tbody>
-				
 				</table>
 			</div>
          </div> 
    	</div> 
 </section> 
+
    <!-- Java Script
    ================================================== --> 
    <script src="js/jquery-3.2.1.min.js"></script>
